comandos loss, recovery, chgrp y reporte ls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ add_executable(MIA_P1_201900629
 		parser.cpp
 		parser.h
 		scanner.cpp
-		scanner.h mbr.h partition.h mkdisk.cpp mkdisk.h rmdisk.h rmdisk.cpp fdisk.h fdisk.cpp ebr.h aux_structs.h mount.cpp mount.h rep.h rep.cpp mkfs.h mkfs.cpp touch.cpp touch.h mkdir.cpp mkdir.h exec.cpp exec.h cat.cpp cat.h ren.cpp ren.h mv.cpp mv.h rm.cpp rm.h eidt.cpp edit.h cp.cpp cp.h find.cpp find.h users.cpp users.h)
+		scanner.h mbr.h partition.h mkdisk.cpp mkdisk.h rmdisk.h rmdisk.cpp fdisk.h fdisk.cpp ebr.h aux_structs.h mount.cpp mount.h rep.h rep.cpp mkfs.h mkfs.cpp touch.cpp touch.h mkdir.cpp mkdir.h exec.cpp exec.h cat.cpp cat.h ren.cpp ren.h mv.cpp mv.h rm.cpp rm.h eidt.cpp edit.h cp.cpp cp.h find.cpp find.h users.cpp users.h simulate.cpp simulate.h ch.cpp ch.h)
